--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,10 +19,9 @@ body
   font-size: 24px;
 }
 
-.heart-container
-{
+.heart-container {
   position: relative;
-  width: 300px
+  width: 300px;
   display: flex;
   justify-content: space-between;
   align-items: center;
